--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=GFS+Didot&display=swap');
+</style>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap');
+</style>
+<div id="Header"><i>Let Them Eat Cake</i></div>
+<link rel="stylesheet" href="style.css">
 
+<div class="wrapper">
+    <h1>You Are Cordially Invited!</h1>
+        <div class="cake">
+            <div class="candle"></div>
+            <div class="top-layer"></div>
+            <div class="middle-layer"></div>
+            <div class="bottom-layer"></div>
+        </div>
+</div>
+
+<h2>Greetings honored guests! Today, I-your gracious, generous (and slightly dramatic) host- am opening
+    doors to a celebration of sugar, whimsy, and questionable authority. <br> There is only <i>one</i> rule here.
+    Well... actually... there are several. But they all revolve around cake.</h2>
+
+<div id="rules">
+    <h3>Rule No.1</h3>I will call each gust forward according to age. One bye one. Patiently. Magestically. When your
+    age is spoken, you must answer correctly.<br>
+    <h3>Rule No.2</h3>The correct response? Simply: <b>"Let them eat cake."</b><br>Exactly that. No more. No less. No
+    add-ons, emojies, or even nervous giggles.<br>
+    <h3>Rule No.3</h3>Upon perfect recitation, you shall recieve your slice-a fluffy symbol of triumph, etiquette, and
+    delicious compliance.<br>
+    <h3>Rule No. 4</h3>Failure to respond with the sacred phrase results in-<i>gasps</i><br>no cake for you!<h3>Rule
+        No.5</h3>Attempts to bribe the host will be met with admiration(but will not get you cake).<br>Probably<br>We'll
+    see.
+</div>
